2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/autodetect/gstautoaudiosrc.c:
	(gst_auto_audio_src_class_init):
	* gst/autodetect/gstautovideosrc.c:
	(gst_auto_video_src_class_init):
	Fix "Since" tags in the documentation.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Sjoerd Simons <sjoerd at luon dot net>

	* ext/soup/gstsouphttpsrc.c: (gst_soup_http_src_class_init),
	(gst_soup_http_src_set_property), (gst_soup_http_src_get_property):
	Add support for souphttpsrc to act as a live source. This makes it
	possible to get timestamped buffers in combination with the
	"do-timestamp" property. Fixes bug #556019.

2008-10-27  Stefan Kost  <ensonic@users.sf.net>

	* gst/autodetect/Makefile.am:
	* gst/autodetect/gstautoaudiosink.c:
	* gst/autodetect/gstautoaudiosrc.c:
	* gst/autodetect/gstautoaudiosrc.h:
	* gst/autodetect/gstautodetect.c:
	* gst/autodetect/gstautovideosink.c:
	* gst/autodetect/gstautovideosrc.c:
	* gst/autodetect/gstautovideosrc.h:
	  Implement src plugins. Little code/string cleanup in the sinks.
	  Fixes #523813.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Peter Kjellerstedt <pkj at axis com>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_reset),
	(gst_matroska_mux_request_new_pad), (gst_matroska_mux_release_pad):
	Fix a memory leak when pads are requested but the pipeline never
	goes into PLAYING.

	Correctly remove request pads, no matter if they have collected
	data or not.

	Fixes bug #557710.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: <lrn1986 at gmail dot com>

	* gst/udp/gstudpnetutils.h:
	Define the correct WINVER so getaddinfo() can be used when using
	mingw32. Fixes bug #557294.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: <lrn1986 at gmail dot com>

	* gst/udp/gstdynudpsink.c: (gst_dynudpsink_render):
	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_render):