@@ -7,34 +7,36 @@ GstGConfVideoSrc GstChildProxy
 GstSwitchSink GstChildProxy
 GstGConfAudioSink GstChildProxy
 GstGConfAudioSrc GstChildProxy
-GstAutoVideoSink GstChildProxy
-GstAutoAudioSink GstChildProxy
 GstRgVolume GstChildProxy
 GstRTSPSrc GstChildProxy GstURIHandler
-GstPulseSink GstPropertyProbe GstImplementsInterface
+GstAutoVideoSink GstChildProxy
+GstAutoVideoSrc GstChildProxy
+GstAutoAudioSink GstChildProxy
+GstAutoAudioSrc GstChildProxy
+GstPulseSink GstImplementsInterface GstPropertyProbe
 GstShout2send GstTagSetter
 GstUDPSink GstURIHandler
-GstPulseSrc GstPropertyProbe GstImplementsInterface GstMixer
+GstPulseSrc GstImplementsInterface GstPropertyProbe GstMixer
 GstOssSrc GstImplementsInterface GstMixer
 GstSoupHTTPSrc GstURIHandler
-GstDV1394Src GstPropertyProbe GstURIHandler
-GstHDV1394Src GstPropertyProbe GstURIHandler
-GstV4l2Src GstPropertyProbe GstImplementsInterface GstTuner GstColorBalance GstVideoOrientation
+GstCddaBaseSrc GstURIHandler
+GstCdioCddaSrc GstURIHandler
+GstV4l2Src GstImplementsInterface GstPropertyProbe GstTuner GstColorBalance GstVideoOrientation
 GstUDPSrc GstURIHandler
-GstPulseMixer GstPropertyProbe GstImplementsInterface GstMixer
-GstFlacEnc GstTagSetter
-GstFlacTag GstTagSetter
+GstPulseMixer GstImplementsInterface GstPropertyProbe GstMixer
 GstTagLibMux GstTagSetter
 GstId3v2Mux GstTagSetter
 GstApev2Mux GstTagSetter
-GstVideoBalance GstImplementsInterface GstColorBalance
+GstSpeexEnc GstTagSetter
 GstIirEqualizer GstChildProxy
 GstIirEqualizerNBands GstChildProxy
-GstIirEqualizer3Bands GstChildProxy
-GstIirEqualizer10Bands GstChildProxy
-GstSpeexEnc GstTagSetter
+GstIirEqualizer3Bands GstChildProxy GstPreset
+GstIirEqualizer10Bands GstChildProxy GstPreset
+GstVideoBalance GstImplementsInterface GstColorBalance
+GstFlacEnc GstTagSetter
+GstFlacTag GstTagSetter
 GstOssMixerElement GstImplementsInterface GstMixer
-GstRTSPGoogle GstRTSPExtension
 GstVideoMixer GstChildProxy
+GstRTSPGoogle GstRTSPExtension
 GstMatroskaMux GstTagSetter
 GstAviMux GstTagSetter
