@@ -1,21 +1,20 @@
 <plugin>
   <name>autodetect</name>
-  <description>Plugin contains auto-detection plugins for video/audio outputs</description>
+  <description>Plugin contains auto-detection plugins for video/audio in- and outputs</description>
   <filename>../../gst/autodetect/.libs/libgstautodetect.so</filename>
   <basename>libgstautodetect.so</basename>
-  <version>0.10.11</version>
+  <version>0.10.10.3</version>
   <license>LGPL</license>
   <source>gst-plugins-good</source>
-  <package>GStreamer Good Plug-ins source release</package>
-  <origin>Unknown package origin</origin>
+  <package>GStreamer Good Plug-ins CVS/prerelease</package>
+  <origin>http://gstreamer.freedesktop.org</origin>
   <elements>
     <element>
       <name>autoaudiosink</name>
       <longname>Auto audio sink</longname>
       <class>Sink/Audio</class>
       <description>Wrapper audio sink for automatically detected audio sink</description>
-      <author>Ronald Bultje &lt;rbultje@ronald.bitfreak.net&gt;
-    Jan Schmidt &lt;thaytan@noraisin.net</author>
+      <author>Ronald Bultje &lt;rbultje@ronald.bitfreak.net&gt;012Jan Schmidt &lt;thaytan@noraisin.net&gt;</author>
       <pads>
         <caps>
           <name>sink</name>
@@ -26,16 +25,45 @@
       </pads>
     </element>
     <element>
+      <name>autoaudiosrc</name>
+      <longname>Auto audio source</longname>
+      <class>Sink/Audio</class>
+      <description>Wrapper audio source for automatically detected audio source</description>
+      <author>Ronald Bultje &lt;rbultje@ronald.bitfreak.net&gt;012Jan Schmidt &lt;thaytan@noraisin.net&gt;012Stefan Kost &lt;ensonic@users.sf.net&gt;</author>
+      <pads>
+        <caps>
+          <name>src</name>
+          <direction>source</direction>
+          <presence>always</presence>
+          <details>ANY</details>
+        </caps>
+      </pads>
+    </element>
+    <element>
       <name>autovideosink</name>
       <longname>Auto video sink</longname>
       <class>Sink/Video</class>
       <description>Wrapper video sink for automatically detected video sink</description>
-      <author>Ronald Bultje &lt;rbultje@ronald.bitfreak.net&gt;
-    Jan Schmidt &lt;thaytan@noraisin.net</author>
+      <author>Ronald Bultje &lt;rbultje@ronald.bitfreak.net&gt;012Jan Schmidt &lt;thaytan@noraisin.net&gt;</author>
       <pads>
         <caps>
           <name>sink</name>
           <direction>sink</direction>
+          <presence>always</presence>
+          <details>ANY</details>
+        </caps>
+      </pads>
+    </element>
+    <element>
+      <name>autovideosrc</name>
+      <longname>Auto video source</longname>
+      <class>Source/Video</class>
+      <description>Wrapper video source for automatically detected video source</description>
+      <author>Ronald Bultje &lt;rbultje@ronald.bitfreak.net&gt;012Jan Schmidt &lt;thaytan@noraisin.net&gt;012Stefan Kost &lt;ensonic@users.sf.net&gt;</author>
+      <pads>
+        <caps>
+          <name>src</name>
+          <direction>source</direction>
           <presence>always</presence>
           <details>ANY</details>
         </caps>
